Fix alignment issues

--- a/src/components/Widget/components/Launcher/style.scss
+++ b/src/components/Widget/components/Launcher/style.scss
@@ -13,6 +13,9 @@
   margin-top: 10px;
   cursor: pointer;
   width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:focus {
     outline: none;
