--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -26,7 +26,8 @@
 }
 
 @mixin close-button-fs {
-  background-color: $turqois-1;
+  background-color: transparent;
+  // background-color: $turqois-1;
   border: 0;
   display: block;
   position: absolute;
